--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
   K'
 - !lcc 'E456'
 - !lcsh 'Illinois -- History -- Civil War, 1861-1865 -- Registers'
+- GITenberg
 title: "Company K, Twentieth Regiment, Illinois Volunteer Infantry\r\nRoster and Record,\
   \ April 24, 1861-July 16, 1865"
 url: http://www.gutenberg.org/ebooks/32017
